<resources>
    <string name="app_name">Mad12</string>
    <string name="done_button">Done</string>
    <string name="active_cards_text">Active Cards</string>
    <string name="card_expired_text">Expired!</string>
    <string name="card_time_left_text">Left: %s</string>
    <string name="create">Create</string>
    <string name="card_description">Card Description</string>
    <string name="card_name">Card Name</string>
    <string name="completed">Card is completed!</string>
    <string name="title_activity_authorization">AuthorizationActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_text">Login</string>
    <string name="password_text">Password</string>
    <string name="back">Back</string>
    <string name="shared_preference_name">me.antandtim.mad12.DATA</string>
    <string name="login_preferences_key">LOGIN</string>
    <string name="password_preferences_key">PASSWORD</string>
    <string name="real_wishes">RealWishes</string>
    <string name="log_in_button">Log In</string>
    <string name="suggestion_text">First time here? Press the button below</string>
    <string name="create_account_button">Create account</string>
    <string name="time_left">Time left</string>
    <string name="numbers_time_left">23:59</string>
    <string name="log_out">Log Out</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_main">Main</string>
    <string name="first_name_hint">First Name</string>
    <string name="last_name_hint">Last Name</string>
    <string name="channel_name">Notification Channel</string>
    <string name="channel_description">Notify about timer</string>
    <string name="notification_title">Hi there!</string>
    <string name="notification_description">Do not forget that all your wishes are real! Let\'s check what is going on!</string>
    <string name="no_data">No data</string>
</resources>