<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".card.activity.CardActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:background="@color/blue_main"
        android:layout_width="match_parent"
        style="@style/Widget.MaterialComponents.Toolbar.Primary"
        android:layout_height="?attr/actionBarSize" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_marginHorizontal="@dimen/layout_margin"
        android:layout_marginVertical="@dimen/activity_card_layout_margin_vertical"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_name"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cardName"
            style="@style/TextAppearance.MaterialComponents.Headline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/card_description"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/cardDescription"
            style="@style/TextAppearance.MaterialComponents.Body1"
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:layout_marginTop="@dimen/activity_card_text_margin_top"
            android:textSize="24sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/time_left"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/timeLeft"
            style="@style/TextAppearance.MaterialComponents.Headline3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="?attr/colorPrimary"
            android:textSize="30sp" />



    </LinearLayout>

    <Button
        android:id="@+id/doneButton"
        android:backgroundTint="@color/blue_main"
        android:layout_width="match_parent"
        android:layout_height="@dimen/close_button_height"
        android:layout_marginHorizontal="@dimen/close_button_margin"
        android:layout_marginBottom="@dimen/close_button_margin"
        android:text="@string/done_button" />

</LinearLayout>